# bitrix-rag-indexer

./: .dockerignore  .env.example  .gitignore  CUDA.md  MODELS.md  README.md  docker-compose.yml  pyproject.toml
configs/: chunking.yaml  embeddings.yaml  limits.yaml  qdrant.yaml  ranking.yaml  sources.mvp.yaml
docker/mcp/: Dockerfile
eval/: queries.mvp.example.yaml  queries.mvp.yaml
eval/reports/: dense-bge-base-en-v15.md  dense-jina-v2-base-code.md  dense-multilingual-minilm-l12.md  mvp-baseline.md
manual/: bitrix-components.md  bitrix-im.md  bitrix-local.md
scripts/: qdrant_sparse_smoke.py
src/bitrix_rag_indexer/: app.py  cli.py
src/bitrix_rag_indexer/chunking/: markdown_chunker.py  php_chunker.py  text_chunker.py
src/bitrix_rag_indexer/config/: loader.py
src/bitrix_rag_indexer/discovery/: scanner.py
src/bitrix_rag_indexer/embeddings/: cache.py  dense.py  onnx_runtime.py
src/bitrix_rag_indexer/eval/: runner.py
src/bitrix_rag_indexer/experiments/: prepare.py
src/bitrix_rag_indexer/mcp/: app_state.py  search_service.py  server.py  settings.py
src/bitrix_rag_indexer/metadata/: payload.py
src/bitrix_rag_indexer/parsing/: detect_language.py  (+1 more)
tests/: test_dense_embedder_gpu_config.py  test_dense_embedder_prefixes.py  test_embedding_cache.py  test_eval_runner.py  test_manifest.py  test_mcp_settings.py  test_php_context_prefix.py  test_php_payload_config.py  test_php_tree_sitter_chunker.py  test_phpdoc_chunking.py  test_prepare_dense_experiment.py  test_profiling.py  test_qdrant_sparse_search_mode.py  test_search.py  test_tree_sitter_php.py
(+13 files in other folders)
