[project]
name = "bitrix-rag-indexer"
version = "0.1.0"
description = "Bitrix code indexer for RAG search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "qdrant-client[fastembed]>=1.12.0",
    "fastembed>=0.4.0",
    "xxhash>=3.5.0",
    "pathspec>=0.12.1",
    "python-dotenv>=1.0.1",
    "psutil>=6.1.0",
]

[project.scripts]
bitrix-rag = "bitrix_rag_indexer.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
